tests/algorithms/x/Scala/machine_learning/apriori_algorithm.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:196: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[_ >: scala.collection.mutable.ArrayBuffer[String] with String <: java.io.Serializable]]
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]]
Note: scala.collection.mutable.ArrayBuffer[_ >: scala.collection.mutable.ArrayBuffer[String] with String <: java.io.Serializable] >: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]], but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]`. (SLS 3.2.10)
    itemset = itemset :+ (t)
                      ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:210: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[_73] where type _73 >: scala.collection.mutable.ArrayBuffer[String] with String <: java.io.Serializable
 required: scala.collection.mutable.ArrayBuffer[String]
        val candidate: ArrayBuffer[String] = itemset.lift((j.toInt).toInt).getOrElse(ArrayBuffer[String]())
                                                                                    ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:221: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[_ >: String with _181 <: java.io.Serializable]] where type _181 >: scala.collection.mutable.ArrayBuffer[String] with String <: java.io.Serializable
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]
Note: scala.collection.mutable.ArrayBuffer[_ >: String with _181 <: java.io.Serializable] >: scala.collection.mutable.ArrayBuffer[String], but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.collection.mutable.ArrayBuffer[String]`. (SLS 3.2.10)
        new_itemset = new_itemset :+ (itemset.lift((k.toInt).toInt).getOrElse(ArrayBuffer[String]()))
                                  ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:225: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]]
    itemset = new_itemset
              ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:228: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[_253] where type _253 >: scala.collection.mutable.ArrayBuffer[String] with String <: java.io.Serializable
 required: scala.collection.mutable.ArrayBuffer[String]
      var sorted_item: ArrayBuffer[String] = sort_strings(itemset.lift((m.toInt).toInt).getOrElse(ArrayBuffer[String]()))
                                                                                                 ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:233: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]]
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]
    val combos: ArrayBuffer[ArrayBuffer[ArrayBuffer[String]]] = combinations_lists(itemset, length)
                                                                                   ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/apriori_algorithm.scala:234: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]]
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[String]]
    itemset = prune(itemset, combos, length)
                    ^
7 errors found
